# StateEngine

./: .gitignore  LICENSE  README.md  __init__.py  _common_utils.py  _errors.py  _stateengine.py  errors.py  pyproject.toml  stateengine.py
src/StateEngine/: _stateengine.py
