[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stateengine"
version = "0.0.1a1"
authors = [
  { name="Ayman Imtyaz", email="aymanimtyaz@gmail.com" },
]
description = "Finite State Machines in Pure Python!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aymanimtyaz/StateEngine"
"Bug Tracker" = "https://github.com/aymanimtyaz/StateEngine/issues"
